force-app/main/default/objects/Finanzierungsanfrage__c/Finanzierungsanfrage__c.object-meta.xml
<CustomObject>
    <label>Finanzierungsanfrage</label>
    <nameField>
        <label>Finanzierungsanfrage-Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Finanzierungsanfragen</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>