force-app/main/default/objects/Finanzierungsanfrage__c/fields/AdminNotizen__c.field-meta.xml
<CustomField>
    <fullName>AdminNotizen__c</fullName>
    <label>Admin Notizen</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>