force-app/main/default/objects/Finanzierungsanfrage__c/fields/Ampel__c.field-meta.xml
<CustomField>
    <fullName>Ampel__c</fullName>
    <label>Bewertung extern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finanzierung darstellbar</fullName>
            </value>
            <value>
                <fullName>VSA fehlerhaft</fullName>
            </value>
            <value>
                <fullName>Finanzierung eventuell darstellbar</fullName>
            </value>
            <value>
                <fullName>Finanzierung nicht darstellbar</fullName>
            </value>
            <value>
                <fullName>Gelb</fullName>
                <isActive>false</isActive>
                <label>Gelb</label>
            </value>
            <value>
                <fullName>Grün</fullName>
                <isActive>false</isActive>
                <label>Grün</label>
            </value>
            <value>
                <fullName>Rot</fullName>
                <isActive>false</isActive>
                <label>Rot</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>