force-app/main/default/objects/Finanzierungsanfrage__c/fields/AmpelExternImg__c.field-meta.xml
<CustomField>
    <fullName>AmpelExternImg__c</fullName>
    <formula>IMAGE( 
CASE(Ampel__c, 
&quot;Finanzierung darstellbar&quot;, &quot;/img/samples/light_green.gif&quot;,
&quot;VSA fehlerhaft&quot;, &quot;/img/samples/light_yellow.gif&quot;,
&quot;Finanzierung eventuell darstellbar&quot;, &quot;/img/samples/light_yellow.gif&quot;,
&quot;Finanzierung nicht darstellbar&quot;, &quot;/img/samples/light_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;status Farbe&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bewertung extern</label>
    <type>Text</type>
</CustomField>