force-app/main/default/objects/Finanzierungsanfrage__c/fields/AmpelIntern__c.field-meta.xml
<CustomField>
    <fullName>AmpelIntern__c</fullName>
    <label>Bewertung intern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grün</fullName>
            </value>
            <value>
                <fullName>Gelb</fullName>
            </value>
            <value>
                <fullName>Rot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>