force-app/main/default/objects/Finanzierungsanfrage__c/fields/AngeforderteUnterlagen__c.field-meta.xml
<CustomField>
    <fullName>AngeforderteUnterlagen__c</fullName>
    <label>Angeforderte Unterlagen</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>