force-app/main/default/objects/Finanzierungsanfrage__c/fields/Archiviert__c.field-meta.xml
<CustomField>
    <fullName>Archiviert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Archiviert</label>
    <type>Checkbox</type>
</CustomField>