force-app/main/default/objects/Finanzierungsanfrage__c/fields/BankantragUnterschrieben__c.field-meta.xml
<CustomField>
    <fullName>BankantragUnterschrieben__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bankantrag unterschrieben</label>
    <type>Checkbox</type>
</CustomField>