force-app/main/default/objects/Finanzierungsanfrage__c/fields/BeurkundungMoeglich__c.field-meta.xml
<CustomField>
    <fullName>BeurkundungMoeglich__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Beurkundung möglich</label>
    <type>Checkbox</type>
</CustomField>