force-app/main/default/objects/Finanzierungsanfrage__c/fields/DarlehensvertragUnterschrieben__c.field-meta.xml
<CustomField>
    <fullName>DarlehensvertragUnterschrieben__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Darlehensvertrag unterschrieben</label>
    <type>Checkbox</type>
</CustomField>