force-app/main/default/objects/Finanzierungsanfrage__c/fields/DarlehensvertragUnterschriebenAm__c.field-meta.xml
<CustomField>
    <fullName>DarlehensvertragUnterschriebenAm__c</fullName>
    <label>Darlehensvertrag unterschrieben am</label>
    <type>Date</type>
</CustomField>