force-app/main/default/objects/Finanzierungsanfrage__c/fields/DatumBankantragGestellt__c.field-meta.xml
<CustomField>
    <fullName>DatumBankantragGestellt__c</fullName>
    <label>Datum Bankantrag gestellt</label>
    <type>Date</type>
</CustomField>