force-app/main/default/objects/Finanzierungsanfrage__c/fields/ErsterKaeufer__c.field-meta.xml
<CustomField>
    <fullName>ErsterKaeufer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Erster Käufer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Finanzierungsanfragen (Erster Käufer)</relationshipLabel>
    <relationshipName>FinanzierungsanfragenErsterKaeufer</relationshipName>
    <type>Lookup</type>
</CustomField>