force-app/main/default/objects/Finanzierungsanfrage__c/fields/Erwerbstaetigkeit__c.field-meta.xml
<CustomField>
    <fullName>Erwerbstaetigkeit__c</fullName>
    <label>Erwerbstätigkeit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Angestellt</fullName>
            </value>
            <value>
                <fullName>Selbständig</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>