force-app/main/default/objects/Finanzierungsanfrage__c/fields/FB_Entscheidung_moeglich_FinAnf__c.field-meta.xml
<CustomField>
    <fullName>FB_Entscheidung_moeglich_FinAnf__c</fullName>
    <formula>Opportunity__r.FB_Entscheidung_moeglich__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Wird auf VKC gepflegt.</inlineHelpText>
    <label>FB Entscheidung möglich</label>
    <type>Checkbox</type>
</CustomField>