force-app/main/default/objects/Finanzierungsanfrage__c/fields/FBViaEmailVersenden__c.field-meta.xml
<CustomField>
    <fullName>FBViaEmailVersenden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FB via E-Mail versenden</label>
    <type>Checkbox</type>
</CustomField>