force-app/main/default/objects/Finanzierungsanfrage__c/fields/Finanzierung__c.field-meta.xml
<CustomField>
    <fullName>Finanzierung__c</fullName>
    <formula>TEXT(Opportunity__r.Finanzierung__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finanzierung</label>
    <type>Text</type>
</CustomField>