force-app/main/default/objects/Finanzierungsanfrage__c/fields/Finanzierungsbedarf__c.field-meta.xml
<CustomField>
    <fullName>Finanzierungsbedarf__c</fullName>
    <label>Finanzierungsbedarf</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>