force-app/main/default/objects/Finanzierungsanfrage__c/fields/Finanzierungsberater__c.field-meta.xml
<CustomField>
    <fullName>Finanzierungsberater__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finanzierungsberater</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Finanzierungsanfragen (Finanzierungsberater)</relationshipLabel>
    <relationshipName>FinanzierungsanfragenFinanzierungsberate</relationshipName>
    <type>Lookup</type>
</CustomField>