force-app/main/default/objects/Finanzierungsanfrage__c/fields/FinanzierungsbestaetigungAusgestellt__c.field-meta.xml
<CustomField>
    <fullName>FinanzierungsbestaetigungAusgestellt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finanzierungsbestätigung ausgestellt</label>
    <type>Checkbox</type>
</CustomField>