force-app/main/default/objects/Finanzierungsanfrage__c/fields/FinanzierungsbestaetigungAusgestelltAm__c.field-meta.xml
<CustomField>
    <fullName>FinanzierungsbestaetigungAusgestelltAm__c</fullName>
    <label>Finanzierungsbestätigung ausgestellt am</label>
    <type>Date</type>
</CustomField>