force-app/main/default/objects/Finanzierungsanfrage__c/fields/Finanzierungssumme_Baustein1__c.field-meta.xml
<CustomField>
    <fullName>Finanzierungssumme_Baustein1__c</fullName>
    <label>Finanzierungssumme Baustein 1</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>