force-app/main/default/objects/Finanzierungsanfrage__c/fields/Finanzierungsvermittler__c.field-meta.xml
<CustomField>
    <fullName>Finanzierungsvermittler__c</fullName>
    <label>Finanzierungsvermittler</label>
    <length>255</length>
    <type>Text</type>
</CustomField>