force-app/main/default/objects/Finanzierungsanfrage__c/fields/FinanzierungsvertragUnterzeichnet__c.field-meta.xml
<CustomField>
    <fullName>FinanzierungsvertragUnterzeichnet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finanzierungsvertrag unterzeichnet</label>
    <type>Checkbox</type>
</CustomField>