force-app/main/default/objects/Finanzierungsanfrage__c/fields/GrundBewertung__c.field-meta.xml
<CustomField>
    <fullName>GrundBewertung__c</fullName>
    <label>Grund Bewertung</label>
    <type>TextArea</type>
</CustomField>