force-app/main/default/objects/Finanzierungsanfrage__c/fields/GrundFinanzierungsanfragePausiert__c.field-meta.xml
<CustomField>
    <fullName>GrundFinanzierungsanfragePausiert__c</fullName>
    <label>Grund Finanzierungsanfrage pausiert</label>
    <type>TextArea</type>
</CustomField>