force-app/main/default/objects/Finanzierungsanfrage__c/fields/GrundVerloren__c.field-meta.xml
<CustomField>
    <fullName>GrundVerloren__c</fullName>
    <label>Grund verloren</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finanzierung von Bank abgelehnt</fullName>
            </value>
            <value>
                <fullName>Finanzierung von Carestone abgelehnt</fullName>
            </value>
            <value>
                <fullName>Kunde hat sich für andere Finanzierung entschieden</fullName>
            </value>
            <value>
                <fullName>VKC verloren</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>