force-app/main/default/objects/Finanzierungsanfrage__c/fields/InformationenZurFANachErstpruefung__c.field-meta.xml
<CustomField>
    <fullName>InformationenZurFANachErstpruefung__c</fullName>
    <label>Informationen zur FA nach Erstprüfung</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>