force-app/main/default/objects/Finanzierungsanfrage__c/fields/Int_Prov_bez__c.field-meta.xml
<CustomField>
    <fullName>Int_Prov_bez__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Interne Provision an CS Finance wurde gezahlt.</inlineHelpText>
    <label>Int. Prov. bez.</label>
    <type>Checkbox</type>
</CustomField>