force-app/main/default/objects/Finanzierungsanfrage__c/fields/KfWBestaetigungVorhanden__c.field-meta.xml
<CustomField>
    <fullName>KfWBestaetigungVorhanden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Genehmigung des KfW-Zuschuss liegt vor</label>
    <type>Checkbox</type>
</CustomField>