force-app/main/default/objects/Finanzierungsanfrage__c/fields/KfwWunsch__c.field-meta.xml
<CustomField>
    <fullName>KfwWunsch__c</fullName>
    <label>KfW-Wunsch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KfW-Darlehen (261)</fullName>
            </value>
            <value>
                <fullName>KfW-Zuschuss (461)</fullName>
            </value>
            <value>
                <fullName>Bestand</fullName>
            </value>
            <value>
                <fullName>Kein KfW</fullName>
            </value>
            <value>
                <fullName>KfW-Darlehen (461)</fullName>
                <isActive>false</isActive>
                <label>KfW-Darlehen (461)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>