force-app/main/default/objects/Finanzierungsanfrage__c/fields/Kreditinstitut__c.field-meta.xml
<CustomField>
    <fullName>Kreditinstitut__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kreditinstitut</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Finanzierungsanfragen (Bank)</relationshipLabel>
    <relationshipName>FinanzierungsanfragenBank</relationshipName>
    <type>Lookup</type>
</CustomField>