force-app/main/default/objects/Finanzierungsanfrage__c/fields/LaufzeitInJahren__c.field-meta.xml
<CustomField>
    <fullName>LaufzeitInJahren__c</fullName>
    <label>Laufzeit in Jahren</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>