force-app/main/default/objects/Finanzierungsanfrage__c/fields/LaufzeitInMonaten__c.field-meta.xml
<CustomField>
    <fullName>LaufzeitInMonaten__c</fullName>
    <label>Laufzeit in Monaten</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>