force-app/main/default/objects/Finanzierungsanfrage__c/fields/LetztePhasenaenderung__c.field-meta.xml
<CustomField>
    <fullName>LetztePhasenaenderung__c</fullName>
    <label>Letzte Phasenänderung</label>
    <type>DateTime</type>
</CustomField>