force-app/main/default/objects/Finanzierungsanfrage__c/fields/loeschen__c.field-meta.xml
<CustomField>
    <fullName>loeschen__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Nur von Finanzierungsabteilung zu befüllen.</inlineHelpText>
    <label>loeschen</label>
    <type>Checkbox</type>
</CustomField>