force-app/main/default/objects/Finanzierungsanfrage__c/fields/Maklerbetreuer__c.field-meta.xml
<CustomField>
    <fullName>Maklerbetreuer__c</fullName>
    <formula>Opportunity__r.Maklerbetreuer_WirtschaftsHaus__r.FirstName + &apos; &apos; +  Opportunity__r.Maklerbetreuer_WirtschaftsHaus__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maklerbetreuer</label>
    <type>Text</type>
</CustomField>