force-app/main/default/objects/Finanzierungsanfrage__c/fields/MaximaleFinanzierungssumme__c.field-meta.xml
<CustomField>
    <fullName>MaximaleFinanzierungssumme__c</fullName>
    <label>Maximale Finanzierungssumme</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>