force-app/main/default/objects/Finanzierungsanfrage__c/fields/MonatlicheRateBis__c.field-meta.xml
<CustomField>
    <fullName>MonatlicheRateBis__c</fullName>
    <label>Monatliche Rate bis</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>