force-app/main/default/objects/Finanzierungsanfrage__c/fields/MonatlicheRateVon__c.field-meta.xml
<CustomField>
    <fullName>MonatlicheRateVon__c</fullName>
    <label>Monatliche Rate von</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>