force-app/main/default/objects/Finanzierungsanfrage__c/fields/NaechsteErinnerungsEmailAm__c.field-meta.xml
<CustomField>
    <fullName>NaechsteErinnerungsEmailAm__c</fullName>
    <label>Nächste Erinnerungs-E-Mail am</label>
    <type>DateTime</type>
</CustomField>