force-app/main/default/objects/Finanzierungsanfrage__c/fields/NaechsterSchritt__c.field-meta.xml
<CustomField>
    <fullName>NaechsterSchritt__c</fullName>
    <label>Nächster Schritt</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>