force-app/main/default/objects/Finanzierungsanfrage__c/fields/NotarterminMoeglichAb__c.field-meta.xml
<CustomField>
    <fullName>NotarterminMoeglichAb__c</fullName>
    <formula>Opportunity__r.NotaryDatePossibleFrom__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notartermin möglich ab</label>
    <type>Date</type>
</CustomField>