force-app/main/default/objects/Finanzierungsanfrage__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Verkaufschance</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Finanzierungsanfragen</relationshipLabel>
    <relationshipName>Finanzierungsanfragen</relationshipName>
    <type>Lookup</type>
</CustomField>