force-app/main/default/objects/Finanzierungsanfrage__c/fields/OrganisationsId__c.field-meta.xml
<CustomField>
    <fullName>OrganisationsId__c</fullName>
    <label>Organisations Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>