force-app/main/default/objects/Finanzierungsanfrage__c/fields/Organisationsname__c.field-meta.xml
<CustomField>
    <fullName>Organisationsname__c</fullName>
    <label>Organisationsname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>