force-app/main/default/objects/Finanzierungsanfrage__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finanzierungsanfrage gestellt</fullName>
                <default>true</default>
                <label>Finanzierungsanfrage gestellt</label>
            </value>
            <value>
                <fullName>VSA vorhanden</fullName>
            </value>
            <value>
                <fullName>Rückfragen gestellt</fullName>
            </value>
            <value>
                <fullName>Unterlagen angefordert</fullName>
            </value>
            <value>
                <fullName>Bankantrag</fullName>
            </value>
            <value>
                <fullName>Finanzierung pausiert</fullName>
            </value>
            <value>
                <fullName>Finanzierung genehmigt</fullName>
            </value>
            <value>
                <fullName>Finanzierung verloren</fullName>
            </value>
            <value>
                <fullName>Abgelehnt</fullName>
                <isActive>false</isActive>
                <label>Abgelehnt</label>
            </value>
            <value>
                <fullName>Abgeschlossen</fullName>
                <isActive>false</isActive>
                <label>Abgeschlossen</label>
            </value>
            <value>
                <fullName>Bankzusage</fullName>
                <isActive>false</isActive>
                <label>Bankzusage</label>
            </value>
            <value>
                <fullName>Erfolgreich</fullName>
                <isActive>false</isActive>
                <label>Erfolgreich</label>
            </value>
            <value>
                <fullName>Gewonnen</fullName>
                <isActive>false</isActive>
                <label>Gewonnen</label>
            </value>
            <value>
                <fullName>In Bearbeitung</fullName>
                <isActive>false</isActive>
                <label>In Bearbeitung</label>
            </value>
            <value>
                <fullName>In Bearbeitung CS</fullName>
                <isActive>false</isActive>
                <label>In Bearbeitung CS</label>
            </value>
            <value>
                <fullName>Keine Finanzierung möglich</fullName>
                <isActive>false</isActive>
                <label>Keine Finanzierung möglich</label>
            </value>
            <value>
                <fullName>Kreditverträge unterzeichnet</fullName>
                <isActive>false</isActive>
                <label>Kreditverträge unterzeichnet</label>
            </value>
            <value>
                <fullName>Neu</fullName>
                <isActive>false</isActive>
                <label>Neu</label>
            </value>
            <value>
                <fullName>Verloren</fullName>
                <isActive>false</isActive>
                <label>Verloren</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>