force-app/main/default/objects/Finanzierungsanfrage__c/fields/PhasendauerInTagen__c.field-meta.xml
<CustomField>
    <fullName>PhasendauerInTagen__c</fullName>
    <formula>TEXT(TODAY() - DATEVALUE(LetztePhasenaenderung__c)) + &apos; Tage in &apos; + TEXT(Phase__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phasendauer in Tagen</label>
    <type>Text</type>
</CustomField>