force-app/main/default/objects/Finanzierungsanfrage__c/fields/PhaseOpportunity__c.field-meta.xml
<CustomField>
    <fullName>PhaseOpportunity__c</fullName>
    <formula>TEXT( Opportunity__r.StageName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phase VKC</label>
    <type>Text</type>
</CustomField>