force-app/main/default/objects/Finanzierungsanfrage__c/fields/Sondertilgung__c.field-meta.xml
<CustomField>
    <fullName>Sondertilgung__c</fullName>
    <label>Sondertilgung</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sondertilgungsoption</fullName>
            </value>
            <value>
                <fullName>Keine Sondertilgungsoption</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>