force-app/main/default/objects/Finanzierungsanfrage__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Voranfrage</fullName>
            </value>
            <value>
                <fullName>Neue Anfrage</fullName>
            </value>
            <value>
                <fullName>Nicht erreicht</fullName>
            </value>
            <value>
                <fullName>Erstkontakt erfolgt</fullName>
            </value>
            <value>
                <fullName>Keine Finanzierung</fullName>
            </value>
            <value>
                <fullName>Angebot angenommen</fullName>
            </value>
            <value>
                <fullName>Beantragung Bank</fullName>
            </value>
            <value>
                <fullName>Bonitätsunterlagen fehlen</fullName>
            </value>
            <value>
                <fullName>Objektunterlagen fehlen</fullName>
            </value>
            <value>
                <fullName>Bankzusage erhalten</fullName>
            </value>
            <value>
                <fullName>Kreditverträge unterzeichnet</fullName>
            </value>
            <value>
                <fullName>Fremdfinanzierung</fullName>
            </value>
            <value>
                <fullName>1</fullName>
                <isActive>false</isActive>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <isActive>false</isActive>
                <label>2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <isActive>false</isActive>
                <label>3</label>
            </value>
            <value>
                <fullName>4</fullName>
                <isActive>false</isActive>
                <label>4</label>
            </value>
            <value>
                <fullName>Angebot versendet</fullName>
                <isActive>false</isActive>
                <label>Angebot versendet</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>