force-app/main/default/objects/Finanzierungsanfrage__c/fields/StatusAmpel__c.field-meta.xml
<CustomField>
    <fullName>StatusAmpel__c</fullName>
    <formula>IMAGE(
CASE(Phase__c,
&quot;Finanzierung genehmigt&quot;, &quot;/img/samples/light_green.gif&quot;,
&quot;Bankantrag&quot;, &quot;/img/samples/light_yellow.gif&quot;,
&quot;Finanzierungsanfrage gestellt&quot;, &quot;/img/samples/light_red.gif&quot;,
&quot;VSA vorhanden&quot;, &quot;/img/samples/light_red.gif&quot;,
&quot;Rückfragen gestellt&quot;, &quot;/img/samples/light_red.gif&quot;,
&quot;Unterlagen angefordert&quot;, &quot;/img/samples/light_red.gif&quot;,
&quot;Finanzierung pausiert&quot;, &quot;/img/samples/light_red.gif&quot;,
&quot;Finanzierung verloren&quot;, &quot;/img/samples/light_red.gif&quot;,
&quot;/s.gif&quot;),
&quot;Status Farbe&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>