force-app/main/default/objects/Finanzierungsanfrage__c/fields/TageInBankantrag__c.field-meta.xml
<CustomField>
    <fullName>TageInBankantrag__c</fullName>
    <label>Tage in Bankantrag</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>