force-app/main/default/objects/Finanzierungsanfrage__c/fields/TageInUnterlagenAngefordert__c.field-meta.xml
<CustomField>
    <fullName>TageInUnterlagenAngefordert__c</fullName>
    <label>Tage in Unterlagen angefordert</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>