force-app/main/default/objects/Finanzierungsanfrage__c/fields/TageInVSAVorhanden__c.field-meta.xml
<CustomField>
    <fullName>TageInVSAVorhanden__c</fullName>
    <label>Tage in VSA vorhanden</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>