force-app/main/default/objects/Finanzierungsanfrage__c/fields/UnterlagenAngefordertAm__c.field-meta.xml
<CustomField>
    <fullName>UnterlagenAngefordertAm__c</fullName>
    <label>Unterlagen angefordert am</label>
    <type>Date</type>
</CustomField>