force-app/main/default/objects/Finanzierungsanfrage__c/fields/Variante__c.field-meta.xml
<CustomField>
    <fullName>Variante__c</fullName>
    <label>Variante</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blanko</fullName>
                <default>true</default>
                <label>Blanko</label>
            </value>
            <value>
                <fullName>Verkaufsraum</fullName>
            </value>
            <value>
                <fullName>Verkaufschance</fullName>
            </value>
            <value>
                <fullName>Einzelimmobilienanfrage</fullName>
                <isActive>false</isActive>
                <label>Einzelimmobilienanfrage</label>
            </value>
            <value>
                <fullName>Mehrimmobilienanfrage</fullName>
                <isActive>false</isActive>
                <label>Mehrimmobilienanfrage</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>