force-app/main/default/objects/Finanzierungsanfrage__c/fields/Verkaufsraum__c.field-meta.xml
<CustomField>
    <fullName>Verkaufsraum__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Verkaufsraum</label>
    <referenceTo>Verkaufsraum__c</referenceTo>
    <relationshipLabel>Finanzierungsanfragen</relationshipLabel>
    <relationshipName>Finanzierungsanfragen</relationshipName>
    <type>Lookup</type>
</CustomField>