force-app/main/default/objects/Finanzierungsanfrage__c/fields/Vertriebskoordinator__c.field-meta.xml
<CustomField>
    <fullName>Vertriebskoordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vertriebskoordinator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Finanzierungsanfragen (Vertriebskoordinator)</relationshipLabel>
    <relationshipName>FinanzierungsanfragenVertriebskoordinato</relationshipName>
    <type>Lookup</type>
</CustomField>