force-app/main/default/objects/Finanzierungsanfrage__c/fields/VSA_vorhanden__c.field-meta.xml
<CustomField>
    <fullName>VSA_vorhanden__c</fullName>
    <formula>Opportunity__r.VSA_EK_vorhanden__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Wird auf VKC gepflegt und hier angezeigt.</inlineHelpText>
    <label>VSA vorhanden</label>
    <type>Checkbox</type>
</CustomField>