force-app/main/default/objects/Finanzierungsanfrage__c/fields/VSAVorhanden__c.field-meta.xml
<CustomField>
    <fullName>VSAVorhanden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vertrauliche Selbstauskunft liegt vor</label>
    <type>Checkbox</type>
</CustomField>